# ralphar

./: .gitignore  Cargo.toml  PRD.md  README.md  deny.toml  features.json  index.html  jest.config.ts  package-lock.json  package.json  playwright.config.js  playwright.config.ts  ralph.sh
.claude/: features.json  settings.json
.claude/hooks/: pre-compact.sh
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.test.tsx  page.tsx
app/components/: TaskInput.tsx  TaskItem.tsx  TaskList.tsx
docs/plans/: 2026-02-21-ralph-subagents-design.md  2026-02-21-ralph-subagents-plan.md  2026-02-22-backend-reviewer-skill-design.md  2026-02-22-backend-reviewer-skill-plan.md  2026-02-23-context-compaction-design.md  2026-02-23-context-compaction-plan.md  2026-02-24-hybrid-plan-retry-design.md  2026-02-24-hybrid-plan-retry.md  (+2 more)
e2e/: ai-logic.spec.js  ai-user-journeys.spec.js  animations.spec.js  board-rendering.spec.js  complete-gameplay.spec.js  component-integration.spec.ts  dark-mode.spec.ts  disappearing-marks.spec.js  game-state.spec.js  localstorage-persistence.spec.js  score-tracking-user-journeys.spec.js  score-tracking.spec.js  test-e2e-ui-script.spec.ts  todo-list.spec.ts  user-interactions.spec.js  webrtc.spec.js
src/: app.rs  event.rs  event_handler.rs  lib.rs  main.rs  terminal.rs  ui.rs
tests/: e2e_app_state_test.rs  e2e_binary_interaction_test.rs  e2e_cli_test.rs  e2e_event_flow_test.rs  e2e_keyboard_handling_test.rs  e2e_panel_resize_test.rs  e2e_terminal_lifecycle_test.rs  e2e_tui_rendering_test.rs  integration_test.rs
(+10 files in other folders)
